# DIAMONDS

./: .gitignore  CMakeLists.txt  FileProcess.h  LICENSE.txt  MANIFEST.in  MathExtra.h  README.md  a.out  configure.cpp  demo.cpp  improvements.todo  install_osx.sh  install_unix.sh  ok  peakbagging.cpp  prova  setup.py  source.cpp  test  todo.txt
data/: data2.txt  testPSD.txt
demos/: TestLikelihood1.cpp  TestLikelihood3.cpp  demoEggbox.cpp  demoEggbox.h  demoEggboxFunction.cpp  demoEggboxFunction.h  demoEllipsoids2D.cpp  demoEllipsoids5D.cpp  demoEllipsoids7D.cpp  demoFive2DGaussians.cpp  demoFive2DGaussians.h  demoGaussianMixtureClusterer2D.cpp  demoGaussianMixtureClusterer5D.cpp  demoHimmelblauFunction.cpp  demoHimmelblauFunction.h  demoKmeansClusterer.cpp  demoKmeansClusterer2D.cpp  demoKmeansClusterer5D.cpp  demoMultiple2DGaussians.cpp  demoPrincipalComponentProjector5D.cpp  demoPriorDrawing1D.cpp  demoPriorDrawing2D.cpp  demoPriorDrawing3D.cpp  demoRastriginFunction.cpp  demoRastriginFunction.h  demoRosenbrockFunction.cpp  demoRosenbrockFunction.h  demoSingle2DGaussian.cpp  demoSingle2DGaussian.h  demoSingleNDGaussian.cpp  demoSingleNDGaussian.h  demoTwo2DCircles.cpp  demoTwo2DGaussians.cpp  demoTwo2DGaussians.h  demoTwoCircles.cpp  demoTwoCircles.h  ellipsoidSample2D.txt  kmeans_testsample.txt  kmeans_testsample2D.txt  kmeans_testsample5D.txt  (+6 more)
demos/BayesianInference_Test/: BayesianInference.cpp  BayesianInferenceCubic.cpp  BayesianInferenceLinear.cpp  BayesianInferenceQuadratic.cpp  CubicModel.cpp  LinearModel.h  NSMC_configuringParameters.txt  QuadraticModel.cpp  QuadraticModel.h  README.txt  cubic_data.txt  linear_data.txt  quadratic_data.txt
docs/: index.rst  requirements.txt
docs/source/: conf.py  events.rst  index.rst  installation.rst  logo.rst  package_content.rst  publications.rst  user_guide_manual.rst
include/: .NestedSampler.h.swp  .Nesting.h.swp  Clusterer.h  CubicModel.h  DeltaPrior.h  Ellipsoid.h  EuclideanMetric.h  ExponentialLikelihood.h  ExponentialReducer.h  FerozReducer.h  File.h  FileProcess.h  FractionalDistanceMetric.h  Functions.h  GaussianMixtureClusterer.h  GaussianMixtureFreeSigmaLikelihood.h  GaussianMixtureLikelihood.h  GaussianModel.h  GeneralizedNormalLikelihood.h  GridPrior.h  GridUniformPrior.h  HyperEllipsoidIntersector.h  HyperEllipsoidSampler.h  HyperQuadricIntersector.h  HyperQuadricSampler.h  KmeansClusterer.h  Likelihood.h  LivePointsReducer.h  LogarithmicReducer.h  LorentzianModel.h  ManhattanMetric.h  MathExtra.h  MeanLikelihood.h  MeanNormalLikelihood.h  Metric.h  MixedPriorMaker.h  Model.h  MonoLorentzianModel.h  MultiEllipsoidSampler.h  MultiLinearModel.h  (+27 more)
macro/: output.macro
python_wrapper/: PyDiamonds.cpp
python_wrapper/include/: PyClusterer.h  PyEuclideanMetric.h  PyFerozReducer.h  PyGridUniformPrior.h  PyKmeansClusterer.h  PyLikelihood.h  PyLivePointsReducer.h  PyMeanNormalLikelihood.h  PyMetric.h  PyModel.h  PyMultiEllispoidSampler.h  PyNestedSampler.h  PyNormalLikelihood.h  PyNormalPrior.h  PyPowerlawReducer.h  PyPrior.h  PySuperGaussianPrior.h  PyUniformPrior.h  PyZeroClusterer.h  PyZeroModel.h  PyZeroPrior.h  PyZeroSampler.h
source/: .NestedSampler.cpp.swp  .peakbagging.cpp.swp  .temp1.cpp.swp  Clusterer.cpp  DeltaPrior.cpp  Ellipsoid.cpp  EuclideanMetric.cpp  ExponentialLikelihood.cpp  ExponentialReducer.cpp  FerozReducer.cpp  File.cpp  FileProcess.cpp  FractionalDistanceMetric.cpp  Functions.cpp  GaussianMixtureClusterer.cpp  GaussianMixtureFreeSigmaLikelihood.cpp  GaussianMixtureLikelihood.cpp  GaussianModel.cpp  GeneralizedNormalLikelihood.cpp  GridPrior.cpp  GridUniformPrior.cpp  HyperEllipsoidIntersector.cpp  HyperEllipsoidSampler.cpp  HyperQuadricIntersector.cpp  HyperQuadricSampler.cpp  KmeansClusterer.cpp  Likelihood.cpp  LinearModel.cpp  LivePointsReducer.cpp  LogarithmicReducer.cpp  LorentzianModel.cpp  ManhattanMetric.cpp  MathExtra.cpp  MeanLikelihood.cpp  MeanNormalLikelihood.cpp  MixedPriorMaker.cpp  Model.cpp  MonoLorentzianModel.cpp  MultiEllipsoidSampler.cpp  MultiLinearModel.cpp  (+34 more)
tutorials/gaussian_fit/: GaussianFit.cpp  NSMC_configuringParameters.txt  NSMC_configuringParameters_1D.txt  NSMC_configuringParameters_2D.txt  NSMC_configuringParameters_3D.txt  README.txt  gaussian_1D.txt  gaussian_2D.txt  gaussian_3D.txt  prior_hyperParameters_1D.txt  prior_hyperParameters_2D.txt  prior_hyperParameters_3D.txt
tutorials/multilinear_fit/: Corsaro17_data_M1.txt  Corsaro17_data_M2.txt  Corsaro17_data_M3.txt  Corsaro17_data_M4.txt  MultiLinearFit.cpp  NSMC_configuringParameters.txt  README.txt  priors_hyperParameters_M1.txt  priors_hyperParameters_M2.txt  priors_hyperParameters_M3.txt  priors_hyperParameters_M4.txt
tutorials/polynomial_fit/: .BayesianInferenceLinear.cpp.swp  PolynomialFit.cpp  README.txt  prior_hyperParameters_cubic.txt  prior_hyperParameters_linear.txt  prior_hyperParameters_quadratic.txt
tutorials/supergaussian_fit/: NSMC_configuringParameters.txt  README.txt  SuperGaussianFit.cpp  Xmeans_configuringParameters.txt  prior_hyperParameters.txt  supergaussian_data.txt
